--- a/prelim.Rmd
+++ b/prelim.Rmd
@@ -11,124 +11,16 @@ editor_options:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 
-library(plyr)
-library(ggplot2)
-library(lubridate)
-library(naniar)
-library(tidyr)
-library(plotly)
-library(knitr)
-library(data.table)
-library(kableExtra)
-library(ggsci)
-library(effects)
-library(tidyverse)
-library(zoo)
-library(caret)
-library(ggpubr)
-library(gridExtra)
-library(lognorm)
-library(reshape2)
-library(matrixStats)
-library(gtools)
-library(dplyr)
-
+source("data_wrangling.R")
 
 ```
 
-
-
-
-
-
-
-```{r read data, include = F, message = F, warning = F}
-
-# define directory
-
-dir_rf <- "G:\\.shortcut-targets-by-id\\1txCh9lZ7VGCujXGvBaJCMVnuxT-65q4K\\Micromet Lab\\Projects\\2014-Burns Bog\\Flux-tower\\flux_data\\for_uncertainty\\RF_results"
-
-dir_unc <- "G:\\.shortcut-targets-by-id\\1txCh9lZ7VGCujXGvBaJCMVnuxT-65q4K\\Micromet Lab\\Projects\\2014-Burns Bog\\Flux-tower\\flux_data\\for_uncertainty"
-
-
-
-## read NEE RF gapfilling with 20x iteration
-result_RF_NEE <- readRDS(paste0(dir_rf,"/BB_NEE_rf_result"))
-# average over 20 iteration
-RF_NEE <- result_RF_NEE %>% pivot_wider(id_cols = DateTime, names_from = iteration, values_from = NEE_RF_filled)
-RF_NEE <- data.frame(DateTime = RF_NEE$DateTime, 
-                     NEE_RF_filled = rowMeans(RF_NEE[, 2:ncol(RF_NEE)]), 
-                     NEE_RF_fsd = rowSds(as.matrix(RF_NEE[, 2:ncol(RF_NEE)])))
-
-## read CH4 RF gapfilling with 20x iteration
-result_RF_FCH4 <- read_csv(paste0(dir_rf,"/BB_FCH4_rf_result.csv"))
-
-# read flux & met data
-BB1 <- fread(paste0(dir_unc,"/BB_L3.csv"))
-BB1[BB1 == -9999] <- NA
-BB1$DATE <- as.POSIXct(BB1$DATE, tz = "UTC")
-BB1$date <- as.Date(BB1$DATE, format="%Y-%m-%d %H:%M:%S")
-
-BB1 <- BB1 %>%
-  mutate(period = NA, 
-         season = NA)
-
-
-# fill long gaps after MDS gapfilling with values from random forest gapfilling
-long_gap2 <- BB1$DATE >= as.POSIXct("2015-12-01 00:30:00", tz = "UTC") &
-  BB1$DATE < as.POSIXct("2016-02-21 00:30:00", tz = "UTC")
-long_gap <- BB1$DATE >= as.POSIXct("2016-10-22 00:30:00", tz = "UTC") &
-  BB1$DATE < as.POSIXct("2017-01-21 00:30:00", tz = "UTC")
-
-
-BB1$NEE_RF <- RF_NEE$NEE_RF_filled  # random forest gapfill
-BB1$NEE_f_RF <- BB1$NEE_f
-BB1$NEE_RF_fsd <- RF_NEE$NEE_RF_filled_SD
-
-# fill all NA values with values from random forest
-BB1$NEE_f_RF[long_gap] <- BB1$NEE_RF[long_gap]
-BB1$NEE_f_RF[long_gap2] <- BB1$NEE_RF[long_gap2]
-
-
-# check if there are still gaps
-which(is.na(BB1$NEE_f_RF))
-
-
-BB1$GPP_f_RF <- BB1$Reco - BB1$NEE_f_RF
-
-
-# filter date
-BB1 <- BB1 %>% 
-  filter(DATE >= as.POSIXct("2015-10-01 00:30:00", tz = "UTC") & DATE < as.POSIXct("2021-10-01 00:00:00", tz = "UTC")) 
-result_RF_FCH4 <- result_RF_FCH4 %>% 
-  filter(DateTime >= as.POSIXct("2015-10-01 00:30:00", tz = "UTC") & DateTime < as.POSIXct("2021-10-01 00:00:00", tz = "UTC")) 
-result_RF_NEE <- result_RF_NEE %>% 
-  filter(DateTime >= as.POSIXct("2015-10-01 00:30:00", tz = "UTC") & DateTime < as.POSIXct("2021-10-01 00:00:00", tz = "UTC"))
-
-
-#Conversion factors
-ch4_conv <- 12.01/(10^6)
-co2_conv <- 12.01/(10^6) 
-d.avg <- 1800 * 48  # 60s * 30min * 2 hours * 24 hours
-
-```
 
 
 # Daily plots 
 
 
-```{r data wrangling and function , include = F, message = F, warning = F}
-
-
-########### BB flux ############
-
-BB_flux <- BB1 %>%
-  select (c(DATE, date, jday, month_local, Year_local, time, period, season,
-            Tau, ET, RH, u., jday, co2_flux, ch4_flux, NEE_f,
-            Reco, GPP_f, GPP_DT, Reco_DT, FCH4_f, FCH4_gf_RF,
-            NEE_f_RF, GPP_f_RF)) %>%
-  dplyr::rename(year_local = Year_local)
-
+```{r functions , include = F, message = F, warning = F}
 
 # function 
 plot_daily <- function(data, variable, label, ma = 15) {
@@ -194,106 +86,12 @@ plot_monthly_anom <- function(main_data, anom_data){
           strip.placement = "outside") 
 }
 
-# function for setting year period
-set_period <- function(data) {
-  data$period <- NA 
-  
-  y_2015_2016 <- data$date >= "2015-10-01" & data$date < "2016-10-01"
-  y_2016_2017 <- data$date >= "2016-10-01" & data$date < "2017-10-01"
-  y_2017_2018 <- data$date >= "2017-10-01" & data$date < "2018-10-01"
-  y_2018_2019 <- data$date >= "2018-10-01" & data$date < "2019-10-01"
-  y_2019_2020 <- data$date >= "2019-10-01" & data$date < "2020-10-01"
-  y_2020_2021 <- data$date >= "2020-10-01" & data$date < "2021-10-01"
-  
-  data$period[y_2015_2016] <- "2015-2016"
-  data$period[y_2016_2017] <- "2016-2017"
-  data$period[y_2017_2018] <- "2017-2018"
-  data$period[y_2018_2019] <- "2018-2019"
-  data$period[y_2019_2020] <- "2019-2020"
-  data$period[y_2020_2021] <- "2020-2021"
-  
-  data
-}
-
-# set season 
-set_season <- function(input, date_vector){
-  input$month_local <- month(date_vector)
-  GS <- input$month_local %in% c(4, 5, 6, 7, 8, 9)
-  NGS <- input$month_local %in% c(10, 11, 12, 1, 2, 3)
-  input$season <- NA
-  input$season[GS] <- "growing season"
-  input$season[NGS] <- "non-growing season"
-  input
-}
-
-
 ```
 
 
-```{r Data wrangling for fluxes, include = F, message = F, warning = F}
-#Conversion factors
-ch4_conv <- 12.01/(10^6)
-co2_conv <- 12.01/(10^6) 
-d.avg <- 1800 * 48  # 60s * 30min * 2 hours * 24 hours
+```{r calculate monthly fluxes, include = F, message = F, warning = F}
 
-#TO FILTER NON GF DATA TO DAYS WHERE ONLY 30% OR MORE IS PRESENT
-daily.nGF <- BB_flux %>%
-  dplyr::select(c(year_local, jday, month_local, co2_flux, ch4_flux)) %>%
-  drop_na()
-
-obs_count <- daily.nGF %>% 
-  group_by(year_local, jday) %>% 
-  tally() %>% 
-  ungroup()
-
-daily.nGF <- daily.nGF %>%
-  group_by(year_local, jday) %>% 
-  summarize(co2 = mean(co2_flux),
-            ch4 = mean(ch4_flux)) %>%
-  mutate(co2gC = co2 * d.avg * co2_conv) %>%
-  mutate(ch4gC = ch4* d.avg * co2_conv) %>%
-  mutate(ch4mgC = ch4gC * 1000) %>% 
-  ungroup() %>% 
-  mutate(n = obs_count$n) %>% 
-  # filter(n > 48 * 0.6) %>%
-  mutate(date = as.POSIXct(paste(year_local, jday, sep = "-"), format = "%Y-%j"))
-
-daily.nGF[which(daily.nGF$n < 48 * 0.3), 2:7] <- NA
-
-  
-# daily.nGF$month_local <- as.factor(daily.nGF$month_local)
-
-daily <- BB_flux %>%
-  ddply("date", summarize,
-            NEE_f = mean(NEE_f),
-            NEE_f_RF = mean(NEE_f_RF),
-            GPP_DT = mean(GPP_DT),
-            GPP_f = mean(GPP_f),
-            GPP_f_RF = mean(GPP_f_RF),
-            Reco = mean(Reco),
-            Reco_DT = mean(Reco_DT),
-            CH4_f_RF = mean(FCH4_gf_RF),
-            CH4_f = mean(FCH4_f)) %>%
-  mutate(NEEgC_f = NEE_f * d.avg * co2_conv, 
-         NEEgC_f_RF = NEE_f_RF * d.avg * co2_conv,
-         GPPgC_DT = GPP_DT * d.avg * co2_conv, 
-         GPPgC_f = GPP_f *d.avg * co2_conv,
-         GPPgC_f_RF = GPP_f_RF * d.avg * co2_conv,
-         RecogC = Reco * d.avg * co2_conv, 
-         RecogC_DT = Reco_DT * d.avg * co2_conv,
-         CH4gC_f = CH4_f * d.avg * ch4_conv, 
-         CH4mgC_f = CH4gC_f * 1000,
-         CH4gC_f_RF = CH4_f_RF * d.avg * ch4_conv,
-         CH4mgC_f_RF = CH4gC_f_RF * 1000,
-         year_local = year(date), 
-         month_local = month(date), 
-         floor_date = floor_date(date, "month"))
-
-
-
-# set year period
-daily <- daily %>% set_period() %>% set_season(date = daily$date)
-
+#### calculate daily cumsum ####
 cumsum <- daily %>% 
   group_by(period) %>% 
   arrange(date) %>% 
@@ -306,6 +104,8 @@ cumsum <- daily %>%
          ) %>% 
   ungroup()
 
+
+#### calculate monthly means ####
 monthly <- daily %>% 
    ddply(c("floor_date"), summarize,
         length = length(NEEgC_f),
@@ -327,28 +127,15 @@ monthly_means <- monthly %>%
        RecogC = mean(RecogC, na.rm = T),
        CH4gC_f = mean(CH4gC_f, na.rm = T),
        CH4gC_f_RF = mean(CH4gC_f_RF, na.rm = T))
-# daily$month_local <- as.factor(daily$month_local)
 
+
+#### calculate monthly anomalies #####
 monthly_anom <- monthly
 for(i in 1:nrow(monthly)){ 
   monthly_anom[i, c(3:8)] <- monthly_anom[i, c(3:8)] -  
     monthly_means[monthly$month_local[i], c(2:7)]
-  }
+}
 
-# dailyGS <- daily[(daily$jday >= 92 & daily$jday <= 274), ] 
-# dailyNGS <-daily[(daily$jday < 92 | daily$jday >=275), ] 
-
-
-# Cbudget <- daily %>%
-#   dplyr::select(c(Site, month_local, jday, CH4mgC_f_RF, CH4gC_f_RF, NEEgC_f)) %>%
-#   group_by(Site, month_local) %>%
-#   summarise(CH4gCcum = cumsum(CH4gC_f_RF),
-#             CH4mgcum = cumsum(CH4mgC_f_RF),
-#             NEEgCcum = cumsum(NEEgC_f),
-#             NEEgC = NEEgC_f,
-#             CH4gC = CH4gC_f_RF,
-#             CH4mgC = CH4mgC_f_RF,
-#             jday = jday)
 ```
 
 ## Non gap-filled $CO_2$ & $CH_4$ Fluxes 
@@ -442,43 +229,9 @@ ggplotly(GPP_comparison)
 
 ## Meteorological variables 
 
-```{r Data wrangling for met variables, include = F, message = F, warning = F}
+```{r calculate monthly means for met variables, include = F, message = F, warning = F}
 
-BB_met <- BB1 %>%  
-  rename("TS.5" = "SOIL_TEMP_5CM", 
-         "TS.10" = "SOIL_TEMP_10CM",
-         "TS.50" = "SOIL_TEMP_50CM") %>% 
-  group_by(date) %>% 
-  summarize(
-      TS.5 = mean(TS.5, na.rm = T),  # soil temp
-      TS.10 = mean(TS.10, na.rm = T),
-      TS.50 = mean(TS.50, na.rm = T),
-      RH = mean(RH_2M, na.rm = T),  # relative humidity
-      PARin = mean(INCOMING_PAR, na.rm = T) * d.avg * 1e-6,  # mol m2 day -1 
-      SWin = mean(SHORTWAVE_IN, na.rm = T),
-      VPD.y = mean(VPD.y, na.rm = T),
-      VPD.x = mean(VPD.x, na.rm = T),
-      Precip = sum(PRECIP, na.rm = T),
-      PA_EC = mean(PA_EC2_AIR, na.rm = T),  # barrometric pressure from EC
-      PA_2M = mean(PA_2M, na.rm = T),  # barrometric pressure from met
-      Ta = mean(AIR_TEMP_2M, na.rm = T),  # air temp at 2 m
-      # WTH2 = mean(4.606 -(-0.89*WTH2+82)/100),  # water table height before 2018
-      wtd = mean(WTH_absolute, na.rm = T),  # water Marion
-      SWC = mean(SVWC, na.rm = T), # soil water content
-      LE = mean(LE, na.rm = T), 
-      H = mean(H, na.rm = T), 
-      br = mean(bowen_ratio, na.rm = T), 
-      ustar = mean(u., na.rm = T)
-      ) %>%  
-  mutate(month_local = month(date), 
-         year_local = year(date), 
-         floor_date = floor_date(date, "month"))%>%
-  ungroup()
-
-
-# set period
-BB_met <- BB_met %>% set_period() %>% set_season(date = BB_met$date)
-
+#### calculate monthly means for met variables ####
   
 met_monthly <- BB_met %>% 
   ddply("floor_date", summarize, 
@@ -520,6 +273,9 @@ met_monthly_means <- met_monthly %>%
       min_wtd = min(wtd, na.rm = T), 
       max_wtd = max(wtd, na.rm = T))
 
+
+#### calculate monthly anomalies for met variables ####
+
 met_monthly_anom <- met_monthly
 # for(i in 1:nrow(met_monthly)){ 
 #   met_monthly_anom[i, c(3:14)] <- met_monthly_anom[i, c(3:14)] -  
@@ -539,7 +295,7 @@ for(i in 1:nrow(met_monthly_anom)){
 
 ### soil temperature ###
 
-(TS <- TS_no_out %>% 
+(TS <- BB_met %>% 
   # filter(date <= "2020-01-01") %>%
   ggplot() +
   geom_line(aes(x = date, y = TS.5, colour = "5 cm")) + 
@@ -600,12 +356,6 @@ for(i in 1:nrow(met_monthly_anom)){
 ## Monthly $CO_2$ & $CH_4$ fluxes
 
 ```{r plot monthly fluxes, fig.height = 8, fig.width = 8, message = F, warning = F}
-# flux_labels <- c(
-#   bquote('NEE (g C' ~m^-2~ day^-1*')'),
-#   bquote('GPP (g C' ~m^-2~ day^-1*')'),
-#   bquote('Reco (g C' ~m^-2~ day^-1*')'),
-#   bquote('CH4 flux - random forest (g C' ~m^-2~ day^-1*')')
-# )
 
 flux_labels <- c(
   'NEE (gC m-2 month-1)',
@@ -1120,6 +870,8 @@ f_GPP_NGS; f_Reco_NGS
 ```
 
 
+## Check calculation
+
 ```{r check annual pattern, message = F, warning = F}
 # plot_monthly <- function(main_data, mean_data){
 #   main_data%>%
@@ -1336,299 +1088,8 @@ daily_met_flux %>%
 
 ```
 
-```{r Stepwise linear regression }
 
-
-library(MASS)
-library(leaps)
-
-data_nGF <- left_join(daily.nGF, BB_met) %>% 
-  dplyr::select(c(co2gC, ch4gC, date, TS.5, RH, PARin, VPD.y, Precip, PA_2M, Ta, wtd, SWC, LE, H, ustar, br))%>% 
-  drop_na() 
-
-
-data_nGF1 <- data_nGF %>%
-  mutate(log_co2gC = log10(co2gC + 1 - min(co2gC)), 
-         exp_TS.5 = (exp(TS.5)^0.2), 
-         log_wtd = log10(wtd + 1 - min(wtd)), 
-         log_H = log10(H + 1 - min(H)), 
-         exp_H = exp(H), 
-         log_ustar = log(ustar), 
-         ln_SWC = log(SWC)) %>% 
-  dplyr::select(-c(ch4gC, date, co2gC)) 
-
-
-
-# # check data, transform if needed 
-pairs(~ log_co2gC + exp_TS.5 + log_wtd + H + log_ustar + ln_SWC,
-      data = data_nGF1,
-      main = "scatterplot matrix for mco2 ")
-
-# # TS.10 and SWin are removed due to multicollinearity. SWC is removed due to bad data
-# 
-
-# variable selection using AIC 
-model.null <- lm(log_co2gC ~ 1, data = data_nGF1) # no x variable, the null model
-model.full <- lm(log_co2gC ~ ., data = data_nGF1) # all x variables
-
-# Start with null model
-model.step <- stepAIC(model.null, 
-                      scope = list(upper = ~TS.5 + RH + PARin + 
-                                     VPD.y + Precip + PA_2M + Ta + wtd + SWC + 
-                                      LE + H + ustar + br, 
-                                   lower = ~1),
-                      trace = T)
-# start with full model 
-model.step <- stepAIC(model.full, 
-                      scope = list(upper = ~TS.5 + RH + PARin + 
-                                     VPD.y + Precip + PA_2M + Ta + wtd + SWC + 
-                                      LE + H + ustar + br, 
-                                   lower = ~1),
-                      trace = T)
-
-
-# get goodness of fit stats for multiple subsets 
-# nbest = 3 means that the three top with one x variable, two x variables, etc. 
-#
-co2gC_subset <- regsubsets(log_co2gC~., data = data_nGF1, nbest = 3)
-s <- summary(co2gC_subset)
-
-result_stat <- data.frame(s$which, s$rsq, s$adjr2, s$bic)
-
-# order results by decreasing adjr2
-result_stat[order(-result_stat$s.adjr2), ]
-
-# order results by increasing bic
-result_stat[order(result_stat$s.bic), ]
-
-
-
-
-# check assumption model 1
-
-model_1 <- lm(log_co2gC ~ TS.5+VPD.y+H+wtd + SWC, data = data_nGF1)
-sum_1 <- summary(model_1)
-
-data_nGF1$yhat.1 <- fitted(model_1)
-data_nGF1$resid.1 <- residuals(model_1)
-data_nGF1$stdresid.1 <- residuals(model_1)/sum_1$sigma
-
-# Diagnotic plots
-par(mfrow=c(2,2),cex=1.1,mai=c(1.1,1.1,0.5,0.4))
-# Fitted line plot. Predicted y versus observed y.
-plot(data_nGF1$yhat.1~data_nGF1$log_co2gC,xlab="Volume/ha",
-ylab="yhat",main="Predicted vs Actual Volume/ha",
-pch=19)
-abline(a=0,b=1,col="red")
-# Residual plot
-plot(data_nGF1$yhat.1, data_nGF1$resid.1,xlab = "yhat",
-ylab = "Residual",main = "Residual Plot",pch = 19)
-abline(h=0, col="red")
-# Normality plot
-qqnorm(data_nGF1$stdresid.1, ylab = "Std. Residual", pch =19)
-qqline(data_nGF1$stdresid.1, col ="red")
-# Histogram of residuals
-hist(data_nGF1$resid.1,breaks = 5,xlab = "Std. Residual",
-main = "Std. Residuals", col="grey", border="black")
-par(mfrow=c(1,1),cex=1.1,mai=c(1.1,1.1,1.0,1.0))
-
-
-#-----------model 2-----------#
-
-
-data_nGF2 <- data_nGF %>%
-  mutate(co2gC = exp(co2gC)^0.2,
-         exp_TS.5 = (exp(TS.5)^0.2), 
-         log_wtd = log10(wtd + 1 - min(wtd)), 
-         ln_SWC = log(SWC)) %>% 
-  dplyr::select(-c(ch4gC, date, SWC, wtd, TS.5)) 
-
-# model selection
-co2gC_subset <- regsubsets(co2gC~., data = data_nGF2, nbest = 3)
-s <- summary(co2gC_subset)
-
-result_stat <- data.frame(s$which, s$rsq, s$adjr2, s$bic)
-
-# order results by decreasing adjr2
-result_stat[order(-result_stat$s.adjr2), ]
-
-# order results by increasing bic
-result_stat[order(result_stat$s.bic), ]
-
-
-
-model_2 <- lm(co2gC ~ exp_TS.5+log_wtd+ln_SWC+H+ustar, data = data_nGF2)
-sum_2 <- summary(model_2)
-
-data_nGF2$yhat.2 <- fitted(model_2)
-data_nGF2$resid.2 <- residuals(model_2)
-data_nGF2$stdresid.2 <- residuals(model_2)/sum_2$sigma
-
-# Diagnotic plots
-par(mfrow=c(2,2),cex=1.1,mai=c(1.1,1.1,0.5,0.4))
-# Fitted line plot. Predicted y versus observed y.
-plot(data_nGF2$yhat.2~data_nGF2$co2gC,xlab="Volume/ha",
-ylab="yhat",main="Predicted vs Actual Volume/ha",
-pch=19)
-abline(a=0,b=1,col="red")
-# Residual plot
-plot(data_nGF2$yhat.2, data_nGF2$resid.2,xlab = "yhat",
-ylab = "Residual",main = "Residual Plot",pch = 19)
-abline(h=0, col="red")
-# Normality plot
-qqnorm(data_nGF2$stdresid.2, ylab = "Std. Residual", pch =19)
-qqline(data_nGF2$stdresid.2, col ="red")
-# Histogram of residuals
-hist(data_nGF1$resid.2,breaks = 5,xlab = "Std. Residual",
-main = "Std. Residuals", col="grey", border="black")
-par(mfrow=c(1,1),cex=1.1,mai=c(1.1,1.1,1.0,1.0))
-# shapiro-wilks for normality
-shapiro.test(data_nGF2$resid.2)
-
-
-
-
-
-```
-
-
-```{r compare two WTD types}
-
-## check which WTD correction type makes more sense
-
-# plot wtd2 vs wtd
-corr %>% ggplot(aes(x = wtd, y = wtd2)) + 
-    geom_point(aes(col = factor(period), label = factor(period)), size = 3) + 
-  geom_smooth(method = "lm", se = F, col = "black") +
-  labs(x = "wtd", y = "wtd2",  col= "") +  
-  stat_cor(size = 3.5) +
-  theme_bw()
-
-# plot wtd vs precip
-corr %>% ggplot(aes(x = wtd, y = Precip)) + 
-    geom_point(aes(col = factor(period), label = factor(period)), size = 3) + 
-  geom_smooth(method = "lm", se = F, col = "black") +
-  labs(x = "wtd", y = "precip",  col= "") +  
-  stat_cor(size = 3.5) +
-  theme_bw()
-
-# plot wtd2 vs precip
-corr %>% ggplot(aes(x = wtd2, y = Precip)) + 
-    geom_point(aes(col = factor(period), label = factor(period)), size = 3) + 
-  geom_smooth(method = "lm", se = F, col = "black") +
-  labs(x = "wtd2", y = "precip",  col= "") +  
-  stat_cor(size = 3.5) +
-  theme_bw()
-
-
-# plot wtd vs SWC
-corr %>% ggplot(aes(x = wtd, y = SWC)) + 
-    geom_point(aes(col = factor(period)), size = 3) + 
-  geom_smooth(method = "lm", se = F, col = "black") +
-  labs(x = "wtd", y = "SWC",  col= "") +  
-  stat_cor(size = 3.5) +
-  theme_bw()
-
-# plot wtd2 vs SWC
-corr %>% ggplot(aes(x = wtd2, y = SWC)) + 
-    geom_point(aes(col = factor(period)), size = 3) + 
-  geom_smooth(method = "lm", se = F, col = "black") +
-  labs(x = "wtd2", y = "SWC",  col= "") +  
-  stat_cor(size = 3.5) +
-  theme_bw()
-
-
-
-# plot daily wtd vs SWC
-BB_met %>% 
-  filter(period == "2016-2017") %>%
-  ggplot(aes(x = wtd, y = SWC)) + 
-  geom_point() +
-  geom_smooth(method = "lm", se = F, col = "black") + 
-  labs(x = "daily wtd", y = "daily SWC", col = "") + 
-  stat_cor(size = 3.5) + 
-  theme_bw()
-
-# plot timeseries of SWC & WTD
-plot_ly(data = BB_met, x = ~date, y = ~SWC, name = 'SWC', type = 'scatter', mode = 'lines') %>%
-  add_trace( x = ~date, y = ~wtd, name = 'wtd', type = 'scatter', mode = 'lines') %>% 
-    add_trace( x = ~date, y = ~wtd2, name = 'wtd', type = 'scatter', mode = 'lines') 
-
-
-###### for Growing season ####
-
-# plot wtd2 vs wtd
-corr_GS %>% ggplot(aes(x = wtd, y = wtd2)) + 
-    geom_point(aes(col = factor(period), label = factor(period)), size = 3) + 
-  geom_smooth(method = "lm", se = F, col = "black") +
-  labs(title = "growing season", x = "wtd", y = "wtd2",  col= "") +  
-  stat_cor(size = 3.5) +
-  theme_bw()
-
-# plot wtd vs precip
-corr_GS %>% ggplot(aes(x = wtd, y = Precip)) + 
-    geom_point(aes(col = factor(period)), size = 3) + 
-  geom_smooth(method = "lm", se = F, col = "black") +
-  labs(title = "growing season", x = "wtd", y = "precip",  col= "") +  
-  stat_cor(size = 3.5) +
-  theme_bw()
-
-# plot wtd2 vs precip
-corr_GS %>% ggplot(aes(x = wtd2, y = Precip)) + 
-    geom_point(aes(col = factor(period)), size = 3) + 
-  geom_smooth(method = "lm", se = F, col = "black") +
-  labs(title = "growing season", x = "wtd2", y = "precip",  col= "") +  
-  stat_cor(size = 3.5) +
-  theme_bw()
-
-# plot wtd vs SWC
-corr_GS %>% ggplot(aes(x = wtd, y = SWC)) + 
-    geom_point(aes(col = factor(period)), size = 3) + 
-  geom_smooth(method = "lm", se = F, col = "black") +
-  labs(x = "wtd", y = "SWC",  col= "") +  
-  stat_cor(size = 3.5) +
-  theme_bw()
-
-# plot wtd2 vs SWC
-corr_GS %>% ggplot(aes(x = wtd2, y = SWC)) + 
-    geom_point(aes(col = factor(period)), size = 3) + 
-  geom_smooth(method = "lm", se = F, col = "black") +
-  labs(x = "wtd2", y = "SWC",  col= "") +  
-  stat_cor(size = 3.5) +
-  theme_bw()
-
-
-
-
-###### for Non-Growing season ####
-
-# plot wtd2 vs wtd
-corr_NGS %>% ggplot(aes(x = wtd, y = wtd2)) + 
-    geom_point(aes(col = factor(period), label = factor(period)), size = 3) + 
-  geom_smooth(method = "lm", se = F, col = "black") +
-  labs(title = "non-growing season", x = "wtd", y = "wtd2",  col= "") +  
-  stat_cor(size = 3.5) +
-  theme_bw()
-
-# plot wtd vs precip
-corr_NGS %>% ggplot(aes(x = wtd, y = Precip)) + 
-    geom_point(aes(col = factor(period), label = factor(period)), size = 3) + 
-  geom_smooth(method = "lm", se = F, col = "black") +
-  labs(title = "non-growing season", x = "wtd", y = "precip",  col= "") +  
-  stat_cor(size = 3.5) +
-  theme_bw()
-
-# plot wtd2 vs precip
-corr_NGS %>% ggplot(aes(x = wtd2, y = Precip)) + 
-    geom_point(aes(col = factor(period), label = factor(period)), size = 3) + 
-  geom_smooth(method = "lm", se = F, col = "black") +
-  labs(title = "non-growing season", x = "wtd2", y = "precip",  col= "") +  
-  stat_cor(size = 3.5) +
-  theme_bw()
-
-```
-
-
+## Remote Sensing Indices
 
 ```{r read remote sensing indices}
 
@@ -1685,6 +1146,7 @@ RS_indices %>%
 ```
 
 
+## Others
 ```{r, eval = F, include = F}
 # check with Nick 
 
